k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: form137-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: form137-api
  template:
    metadata:
      labels:
        app: form137-api
    spec:
      containers:
        - name: form137-api
          image: jasoncalalang/form137-api-requestor:1
          ports:
            - containerPort: 8080
