k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: form137-api
spec:
  selector:
    app: form137-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
